@@ -1,0 +1,7 @@
+SELECT @@global.innodb_buffer_pool_evict;
+@@global.innodb_buffer_pool_evict
+
+SET GLOBAL innodb_buffer_pool_evict = 'uncompressed';
+SELECT @@global.innodb_buffer_pool_evict;
+@@global.innodb_buffer_pool_evict
+
