@@ -1,3 +1,9 @@
+2013-01-21	The InnoDB Team
+
+	* buf/buf0buf.cc, handler/ha_innodb.cc:
+	Fix Bug#16067973 DROP TABLE IS SLOW WHEN IT DECOMPRESSES
+	COMPRESSED-ONLY PAGES
+
 2013-01-11	The InnoDB Team
 	* row/row0sel.c:
 	Fix Bug#16088883 KILLING A QUERY INSIDE INNODB CAUSES IT TO
@@ -6,7 +12,7 @@
 2012-12-18	The InnoDB Team
 
 	* include/univ.i:
-	Fix Bug#Bug#13463493 INNODB PLUGIN WERE CHANGED, BUT STILL USE THE
+	Fix Bug#13463493 INNODB PLUGIN WERE CHANGED, BUT STILL USE THE
 	SAME VERSION NUMBER 1.0.17
 
 2012-12-13	The InnoDB Team
